# AfrICa

./: Africa_Quiz_10k_MC.xlsx  Dockerfile  README.md  africa_quiz.db  africa_quiz_ui.py  pyproject.toml  run_ui.sh  smoke.db  smoke.json  smoke.xlsx  uploaded_base_questions.xlsx
africa_quiz_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
